feat: vote leaderboard
