# docs/swagger.yaml
@@ -225,6 +225,21 @@ definitions:
       updated_at:
         type: string
     type: object
+  model.DiscordUserUpvoteStreak:
+    properties:
+      created_at:
+        type: string
+      discord_id:
+        type: string
+      last_streak_date:
+        type: string
+      streak_count:
+        type: integer
+      total_count:
+        type: integer
+      updated_at:
+        type: string
+    type: object
   model.GuildConfigActivity:
     properties:
       active:
@@ -507,8 +522,8 @@ definitions:
     properties:
       discord_id:
         type: string
-      telegram_id:
-        type: integer
+      telegram_username:
+        type: string
     type: object
   model.UserWallet:
     properties:
@@ -723,8 +738,8 @@ definitions:
     properties:
       discord_id:
         type: string
-      telegram_id:
-        type: integer
+      telegram_username:
+        type: string
     type: object
   request.LoginRequest:
     properties:
@@ -1351,6 +1366,15 @@ definitions:
       data:
         $ref: '#/definitions/response.User'
     type: object
+  response.GetUserUpvoteLeaderboardResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/model.DiscordUserUpvoteStreak'
+        type: array
+      message:
+        type: string
+    type: object
   response.GetWatchlistResponse:
     properties:
       data:
@@ -1626,8 +1650,8 @@ definitions:
         type: string
       discord_username:
         type: string
-      telegram_id:
-        type: integer
+      telegram_username:
+        type: string
     type: object
   response.ListAllCustomTokenResponse:
     properties:
@@ -2785,7 +2809,7 @@ paths:
       parameters:
       - description: request
         in: query
-        name: telegram_id
+        name: telegram_username
         required: true
         type: string
       produces:
@@ -4245,6 +4269,27 @@ paths:
           schema:
             $ref: '#/definitions/response.GetMyInfoResponse'
       summary: Get top users
+      tags:
+      - User
+  /users/upvote-leaderboard:
+    get:
+      consumes:
+      - application/json
+      description: Get user upvote leaderboard
+      parameters:
+      - description: streak / total
+        in: query
+        name: by
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.GetUserUpvoteLeaderboardResponse'
+      summary: Get user upvote leaderboard
       tags:
       - User
   /users/upvote-streak:
